# TruShell

./: README.md  clock.txt  idea.md  main.py  model.py  package.json  pyproject.toml  settings.py  todos.db
.github/workflows/: python-ci.yml
atoffice_shell/: project.py
chronoterm/: project.py  shell.py  timezones.py
internal/cmd/: go.mod
tests/: test_cli.py  test_cli_argv.py  test_data.py  test_database.py  test_help_docs.py  test_nav.py  test_plugin_manager.py  test_settings.py  test_sound.py  test_z.py
trushell/: cli.py  database.py  project.py  pyfunny.py
trushell/chronoterm/: sound.py  state.py
trushell/commands/: core.py  data.py  nav.py  plugin_mgmt.py  settings.py
trushell/config/: builtin_commands.md
trushell/core/: plugin_api.py  plugin_manager.py  settings.py  trukernel.py
trushell/plugins/chronoterm/: __init__.py
